# YOLOv7_OpenVINO_cpp-python

./: README.md  YOLOV7.py  main.cpp  notebook_utils.py
cpp/: CMakeLists.txt  main.cpp  main_preprocessing.cpp
python/: async_pipeline.py  image.py  main.py  main_iot.py  main_preprocessing.py  requirements.txt  utils.py  webapp_utils.py  webcam.py  yolov7.py
python/models/: custom_segmentation.py  model.py
python/templates/: index.html
